minor UI fix on Icons and Imgs
added spacing between icons, and images when the screen size too large

--- a/app/static/css/seller/product.css
+++ b/app/static/css/seller/product.css
@@ -1,6 +1,7 @@
 .preview-img img {
     width: 150px;
     height: 150px;
+    margin-top: 0.5rem;
 }
 
 .preview-img img + img {
